--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "bower-cache-demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/laputaz/bower-cache-demo#readme",
   "dependencies": {
-    "koa": "2.13.3"
+    "koa": "2.13.3",
+    "koa-router": "^10.1.1",
+    "nodemon": "^2.0.13"
   }
 }
